Refactored Connection Manager